--- a/sass/blocks/advantages.scss
+++ b/sass/blocks/advantages.scss
@@ -1,8 +1,8 @@
 .advantages {
-  margin-bottom: 37px;
+  // margin-bottom: 37px;
+
   & .container {
     @media (min-width: $desktop-width) {
-      padding-left: 222px;
     }
   }
 
