--- a/sass/blocks/reviews.scss
+++ b/sass/blocks/reviews.scss
@@ -15,11 +15,12 @@
       flex-wrap: wrap;
     }
     @media(min-width: $desktop-width) {
-      padding-left: 222px;
     }
   }
 
   &__title {
+    margin: 0;
+    padding-bottom: 28px;
     @media(min-width: $tablet-width) {
       margin-bottom: 47px;
 
@@ -109,7 +110,7 @@
     text-align: center;
 
     @media (min-width: $tablet-width) {
-      margin-top: 38px;
+      margin-top: 10px;
       width: 175px;
 
       order: 2;
