--- a/sass/blocks/week-product.scss
+++ b/sass/blocks/week-product.scss
@@ -2,7 +2,6 @@
   margin-bottom: 70px;
   & .container {
     @media (min-width: $desktop-width) {
-      padding-left: 222px;
     }
   }
 
@@ -42,6 +41,11 @@
       padding-top: 16px;
       padding-right: 25px;
       width: 98px;
+    }
+    @media(min-width: $desktop-width) {
+      position: absolute;
+      top: 18px;
+      left: 95px;
     }
   }
   & .page-subtitle {
