--- a/sass/blocks/advantages.scss
+++ b/sass/blocks/advantages.scss
@@ -13,8 +13,8 @@
     list-style: none;
 
     @media (min-width: $tablet-width) {
+      display: flex;
       flex-direction: row;
-
       flex-wrap: wrap;
     }
   }
