--- a/sass/blocks/form-order.scss
+++ b/sass/blocks/form-order.scss
@@ -32,7 +32,6 @@
     &--fullname {
       @media (min-width: $tablet-width) {
         padding-top: 40px;
-        padding-right: 50px;
         width: 100%;
       }
     }
@@ -58,6 +57,8 @@
     line-height: 24px;
 
     @media (min-width: $tablet-width) {
+      padding-right: $tablet-padding;
+      padding-left: $tablet-padding;
       font-size: 17px;
       line-height: 30px;
     }
@@ -69,6 +70,9 @@
       padding-top: 5px;
       font-size: 14px;
       line-height: 16px;
+      @media(min-width: $tablet-width) {
+        order: 1;
+      }
     }
   }
 
@@ -215,11 +219,26 @@
   }
 
   &__submit {
-    display: block;
     width: 100%;
+    background-color: transparent;
     text-align: center;
+    @media (min-width: $tablet-width) {
+      width: 230px;
+    }
+  }
+  &__footer {
+    @media(min-width: $tablet-width) {
+      display: flex;
+      flex-direction: row;
+      align-items: baseline;
+      justify-content: space-between;
+      padding-right: $tablet-padding;
+      padding-left: $tablet-padding;
+    }
   }
 }
+
+
 
 .form-order__section {
   margin: 0;
@@ -298,5 +317,12 @@
       display: flex;
       flex-direction: column;
     }
+  }
+  &--item {
+    top: 50px;
+    display: flex;
+    flex-direction: column;
+    padding-left: 127px;
+    width: 100%;
   }
 }
