--- a/sass/blocks/production.scss
+++ b/sass/blocks/production.scss
@@ -8,8 +8,9 @@
     }
 
     @media (min-width: $desktop-width) {
-      flex-direction: row;
+      flex-direction: column;
       align-items: flex-start;
+      height: 455px;
 
       flex-wrap: wrap;
     }
@@ -25,18 +26,35 @@
     border-top: 1px solid $grey;
     border-right: 1px solid $grey;
     border-left: 1px solid $grey;
-    font-weight: 700;
-    font-size: 17px;
-    font-family: $open-sans;
-    line-height: 24px;
 
     @media (min-width: $tablet-width) {
       padding-top: 38px;
       padding-left: 105px;
-      font-size: 20px;
-      line-height: 24px;
 
       order: 2;
+    }
+
+    @media(min-width: $desktop-width) {
+      padding: 0;
+      padding-top: 78px;
+      padding-bottom: 7px;
+      padding-left: 77px;
+      width: 367px;
+    }
+
+    &--text {
+      font-weight: 700;
+      font-size: 17px;
+      font-family: $open-sans;
+      line-height: 24px;
+      @media (min-width: $tablet-width) {
+        font-size: 20px;
+        line-height: 24px;
+      }
+
+      @media(min-width: $desktop-width) {
+        width: 176px;
+      }
     }
   }
 }
@@ -70,8 +88,12 @@
   @media (min-width: $tablet-width) {
     order: 3;
   }
+  @media (min-width: $desktop-width) {
+    padding-bottom: 62px;
+    width: 367px;
+  }
 
-  &-text {
+  &--text {
     padding-bottom: 10px;
     padding-left: 35px;
     width: 220px;
@@ -90,6 +112,12 @@
       font-size: 15px;
       line-height: 30px;
     }
+
+    @media(min-width: $desktop-width) {
+      padding-bottom: 21px;
+      padding-left: 77px;
+      width: 367px;
+    }
   }
 
   &-img {
@@ -106,6 +134,10 @@
     @media (min-width: $tablet-width) {
       width: 580px;
     }
+    @media (min-width: $desktop-width) {
+      margin-left: 81px;
+      width: 230px;
+    }
   }
 }
 
@@ -114,4 +146,9 @@
   top: 28px;
   left: 32px;
   fill: $downy;
+
+  @media(min-width: $desktop-width) {
+    top: 41px;
+    left: 78px;
+  }
 }
