--- a/sass/blocks/site-menu.scss
+++ b/sass/blocks/site-menu.scss
@@ -1,16 +1,43 @@
 .site-menu {
   margin: 0;
+  margin: 0 -30px;
   padding: 0;
   list-style: none;
-
-  &__link {
-    @media (min-width: $tablet-width) {
-      padding: 0;
-    }
-  }
 
   @media (min-width: $tablet-width) {
     display: flex;
     flex-direction: row;
+    margin: 0;
+  }
+
+  &__link {
+    padding-top: 26px;
+    padding-bottom: 28px;
+    width: 100%;
+
+    @media (min-width: $tablet-width) {
+      margin-right: 35px;
+      padding: 0;
+      padding-top: 20px;
+      font-size: 15px;
+      line-height: 24px;
+    }
+
+    @media(min-width: $desktop-width) {
+      z-index: 1;
+      margin: 0;
+      padding: 0;
+      padding-top: 30px;
+      padding-right: 33px;
+      padding-bottom: 33px;
+      font-size: 17px;
+      line-height: 24px;
+    }
+
+    &--catalog {
+      @media (min-width: $desktop-width) {
+        border-right: 1px solid $grey;
+      }
+    }
   }
 }
