--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,6 +10,7 @@
 @import "blocks/user-menu.scss";
 @import "blocks/site-menu.scss";
 @import "blocks/product-menu.scss";
+@import "blocks/product-stock.scss";
 @import "blocks/week-product.scss";
 @import "blocks/advantages.scss";
 @import "blocks/reviews.scss";
@@ -20,3 +21,4 @@
 @import "blocks/form-order.scss";
 @import "blocks/page-footer.scss";
 @import "blocks/social.scss";
+@import "blocks/modal-order.scss";
