--- a/sass/titles.scss
+++ b/sass/titles.scss
@@ -20,12 +20,10 @@
     }
   }
 
-  & .container {
-    background-color: $alabaster;
-  }
-
   & .page-title__container--index {
-    background-color: transparent;
+    padding-top: 70px;
+    min-height: 283px;
+    background: url(../img/hero-mobile@1x.jpg) no-repeat 50% 18%;
   }
 
   & .page-title__container--catalog,
@@ -34,18 +32,31 @@
     padding-bottom: 74px;
   }
 
+
   &--index {
     margin: 0 auto;
-    padding-top: 70px;
-    height: 280px;
-    background-color: transparent;
-    background-image: url("../img/hero-mobile@1x.jpg");
+    border-top: 1px solid $grey;
+    background-color: $alabaster;
     background-position: center;
     background-repeat: no-repeat;
+    @media(min-width: $tablet-width) {
+      margin-top: -44px;
+      margin-bottom: 50px;
+      padding-top: 153px;
+    }
   }
 
   &--catalog {
+    margin-top: -44px;
     margin-bottom: 34px;
+    border-top: 1px solid $grey;
+    background-color: $alabaster;
+  }
+  &--form {
+    margin-top: -44px;
+    margin-bottom: 34px;
+    border-top: 1px solid $grey;
+    background-color: $alabaster;
   }
 }
 
