--- a/sass/titles.scss
+++ b/sass/titles.scss
@@ -23,7 +23,7 @@
   & .page-title__container--index {
     padding-top: 70px;
     min-height: 283px;
-    background: url(../img/hero-mobile@1x.jpg) no-repeat 50% 18%;
+    background: url("../img/hero-mobile@1x.jpg") no-repeat 50% 18%;
   }
 
   & .page-title__container--catalog,
@@ -39,6 +39,7 @@
     background-color: $alabaster;
     background-position: center;
     background-repeat: no-repeat;
+
     @media(min-width: $tablet-width) {
       margin-top: -44px;
       margin-bottom: 50px;
@@ -52,6 +53,7 @@
     border-top: 1px solid $grey;
     background-color: $alabaster;
   }
+
   &--form {
     margin-top: -44px;
     margin-bottom: 34px;
