--- a/sass/blocks/production.scss
+++ b/sass/blocks/production.scss
@@ -1,5 +1,5 @@
 .production {
-  margin-bottom: 38px;
+  margin-bottom: 55px;
 
   & .container {
     @media (min-width: $tablet-width) {
@@ -20,8 +20,8 @@
     position: relative;
     margin: 0;
     padding: 0;
-    padding-top: 22px;
-    padding-bottom: 22px;
+    padding-top: 10px;
+    padding-bottom: 7px;
     padding-left: 90px;
     border-top: 1px solid $grey;
     border-right: 1px solid $grey;
@@ -61,7 +61,9 @@
 }
 
 .production__video {
-  margin-bottom: 25px;
+  width: 260px;
+  height: 150px;
+  // margin-bottom: 25px;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 0;
@@ -91,12 +93,14 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding-bottom: 62px;
+    padding-bottom: 35px;
     width: 367px;
   }
 
   &--text {
-    padding-bottom: 10px;
+    margin: 0;
+    padding-top: 27px;
+    padding-bottom: 27px;
     padding-left: 35px;
     width: 220px;
     letter-spacing: 0;
