--- a/sass/titles.scss
+++ b/sass/titles.scss
@@ -24,19 +24,25 @@
     padding-top: 70px;
     min-height: 283px;
     background: url("../img/hero-mobile@1x.jpg") no-repeat 50% 18%;
+    @media (min-width: $tablet-width) {
+      padding-top: 0;
+    }
   }
 
   & .page-title__container--catalog,
   .page-title__container--form {
     padding-top: 70px;
     padding-bottom: 74px;
+    // @media (min-width: $tablet-width) {
+    //   padding-top: 0;
+    // }
   }
 
 
   &--index {
     margin: 0 auto;
     border-top: 1px solid $grey;
-    background-color: $alabaster;
+    background-color: $seashell;
     background-position: center;
     background-repeat: no-repeat;
 
@@ -48,17 +54,22 @@
   }
 
   &--catalog {
-    margin-top: -44px;
-    margin-bottom: 34px;
+    margin-bottom: 35px;
     border-top: 1px solid $grey;
-    background-color: $alabaster;
+    background-color: $seashell;
+    @media (min-width: $tablet-width) {
+      margin-top: -44px;
+      margin-bottom: 34px;
+    }
   }
 
   &--form {
-    margin-top: -44px;
-    margin-bottom: 34px;
     border-top: 1px solid $grey;
-    background-color: $alabaster;
+    background-color: $seashell;
+    @media (min-width: $tablet-width) {
+      margin-top: -44px;
+      margin-bottom: 34px;
+    }
   }
 }
 
