--- a/sass/blocks/reviews.scss
+++ b/sass/blocks/reviews.scss
@@ -4,6 +4,9 @@
   @media (min-width: $tablet-width) {
     margin-bottom: 90px;
   }
+  @media( min-width: $desktop-width) {
+    margin-bottom: 45px;
+  }
 
   & .container {
     display: flex;
@@ -16,14 +19,18 @@
 
       flex-wrap: wrap;
     }
+    @media(min-width: $desktop-width) {
+      padding-bottom: 140px;
+      border-bottom: 3px solid red;
+    }
   }
 
   &__title {
     margin: 0;
-    padding-bottom: 28px;
+    padding-bottom: 25px;
 
     @media (min-width: $tablet-width) {
-      margin-bottom: 17px;
+      padding-bottom: 45px;
 
       order: 1;
     }
@@ -38,7 +45,7 @@
   &__item {
     margin: 0;
     padding: 0;
-    padding-bottom: 25px;
+    padding-bottom: 27px;
     letter-spacing: 0;
     font-weight: 400;
     font-size: 15px;
@@ -49,6 +56,10 @@
       margin-bottom: 30px;
       font-size: 17px;
       line-height: 31px;
+    }
+    @media (min-width: $desktop-width) {
+      margin-bottom: 10px;
+      width: 770px;
     }
   }
 
@@ -115,6 +126,9 @@
       width: 175px;
 
       order: 2;
+    }
+    @media(min-width: $desktop-width) {
+      margin-top: 7px;
     }
   }
 }
