--- a/sass/blocks/advantages.scss
+++ b/sass/blocks/advantages.scss
@@ -10,6 +10,9 @@
     @media (min-width: $tablet-width) {
       margin-bottom: 74px;
     }
+    @media (min-width: $desktop-width) {
+      margin-top: 75px;
+    }
   }
 
   &__list {
