--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -25,6 +25,9 @@
     font-size: 17px;
     font-family: $open-sans;
     line-height: 24px;
+    @media (min-width: $tablet-width) {
+      padding-left: 82px;
+    }
   }
 
   &__item {
