--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,3 +1,9 @@
+$mobile-width: 320px;
+$mobile-padding: 30px;
+$tablet-width: 768px;
+$tablet-padding: 50px;
+$desktop-width: 1150px;
+$desktop-padding: 50px;
 $black: #000000;
 $white: #ffffff;
 $grey: #ececec;
