--- a/sass/blocks/form-order.scss
+++ b/sass/blocks/form-order.scss
@@ -1,6 +1,10 @@
 .form-order {
   margin-bottom: 55px;
 
+  @media (min-width: $tablet-width) {
+    margin-bottom: 30px;
+  }
+
   & .container {
     @media (min-width: $tablet-width) {
       padding: 0;
@@ -12,13 +16,15 @@
     flex-direction: column;
 
     @media (min-width: $tablet-width) {
+      padding-top: 60px;
+      padding-bottom: 16px;
       padding-left: 127px;
       width: 100%;
     }
 
-    @media (min-width: $tablet-width) {
-      padding-top: 60px;
-      padding-bottom: 16px;
+    @media (min-width: $desktop-width) {
+      padding-top: 64px;
+      padding-left: 72px;
     }
 
     &--color {
@@ -45,6 +51,12 @@
         width: 100%;
       }
     }
+
+    &--add {
+      @media (min-width: $tablet-width) {
+        padding-top: 30px;
+      }
+    }
   }
 
   &__description {
@@ -57,10 +69,19 @@
     line-height: 24px;
 
     @media (min-width: $tablet-width) {
+      margin-bottom: 7px;
+      padding-top: 45px;
       padding-right: $tablet-padding;
+      padding-bottom: 0;
       padding-left: $tablet-padding;
       font-size: 17px;
       line-height: 30px;
+    }
+
+    @media (min-width: $desktop-width) {
+      margin: 0 auto;
+      padding-top: 117px;
+      width: 800px;
     }
 
     &-required {
@@ -72,6 +93,9 @@
       line-height: 16px;
 
       @media (min-width: $tablet-width) {
+        font-size: 17px;
+        line-height: 30px;
+
         order: 1;
       }
     }
@@ -96,6 +120,7 @@
 
       @media (min-width: $tablet-width) {
         margin-bottom: 20px;
+        padding-left: 17px;
         font-size: 19px;
         line-height: 18px;
       }
@@ -208,7 +233,7 @@
     margin-top: 14px;
     padding: 15px;
     width: 100%;
-    height: 145px;
+    height: 142px;
     border: 2px solid $grey-68;
     background-color: transparent;
     letter-spacing: 0;
@@ -217,6 +242,11 @@
     font-family: $open-sans;
     line-height: 18px;
     resize: none;
+
+    @media (min-width: $tablet-width) {
+      font-size: 19px;
+      line-height: 18px;
+    }
   }
 
   &__submit {
@@ -260,6 +290,29 @@
     }
   }
 
+  &--phone {
+    margin-bottom: 10px;
+
+    @media (min-width: $tablet-width) {
+      margin: 0;
+      padding-top: 47px;
+      padding-left: 135px;
+    }
+  }
+
+  &--email {
+    @media (min-width: $tablet-width) {
+      padding-bottom: 30px;
+      padding-left: 105px;
+    }
+  }
+
+  &--add {
+    @media (min-width: $tablet-width) {
+      margin-bottom: 35px;
+    }
+  }
+
   &-title {
     position: relative;
     margin: 0;
@@ -276,6 +329,10 @@
     @media (min-width: $tablet-width) {
       padding-bottom: 34px;
       padding-left: 50px;
+    }
+
+    @media (min-width: $desktop-width) {
+      padding-left: 113px;
     }
 
     &::after {
@@ -301,12 +358,20 @@
     }
   }
 
-  &-title--info {
-    padding-bottom: 14px;
+  &-title--add {
+    padding-bottom: 13px;
 
     @media (min-width: $tablet-width) {
       padding-bottom: 12px;
     }
+  }
+
+  &-title--phone {
+    padding-bottom: 10px;
+  }
+
+  &-title--email {
+    padding-bottom: 10px;
   }
 
   &-grey {
@@ -328,7 +393,6 @@
     @media (min-width: $tablet-width) {
       display: flex;
       flex-direction: column;
-      padding-left: 127px;
     }
   }
 }
