--- a/sass/blocks/coopyright.scss
+++ b/sass/blocks/coopyright.scss
@@ -2,6 +2,10 @@
   padding-top: 20px;
   padding-bottom: 20px;
 
+  @media (min-width: $tablet-width) {
+    padding: 0;
+  }
+
   &__link {
     display: flex;
     align-items: center;
@@ -14,6 +18,10 @@
     font-size: 19px;
     font-family: $open-sans;
     line-height: 18px;
+
+    @media (min-width: $tablet-width) {
+      padding: 0;
+    }
 
     &--icon {
       fill: $downy;
