--- a/sass/blocks/production.scss
+++ b/sass/blocks/production.scss
@@ -1,6 +1,14 @@
 .production {
   margin-bottom: 55px;
 
+  @media (min-width: $tablet-width) {
+    margin-bottom: 62px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 108px;
+  }
+
   & .container {
     @media (min-width: $tablet-width) {
       display: flex;
@@ -28,7 +36,7 @@
     border-left: 1px solid $grey;
 
     @media (min-width: $tablet-width) {
-      padding-top: 18px;
+      padding-top: 23px;
       padding-left: 105px;
 
       order: 2;
@@ -94,7 +102,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding-bottom: 35px;
+    padding-bottom: 57px;
     width: 367px;
   }
 
@@ -112,8 +120,7 @@
 
     @media (min-width: $tablet-width) {
       margin-right: 20px;
-      margin-bottom: 7px;
-      padding-top: 8px;
+      padding-top: 12px;
       padding-left: 40px;
       width: 620px;
       font-size: 15px;
@@ -121,7 +128,7 @@
     }
 
     @media (min-width: $desktop-width) {
-      padding-bottom: 37px;
+      padding-bottom: 45px;
       padding-left: 77px;
       width: 367px;
     }
