--- a/sass/blocks/btn.scss
+++ b/sass/blocks/btn.scss
@@ -12,4 +12,15 @@
   font-size: 18px;
   font-family: $open-sans;
   line-height: 20px;
+  cursor: pointer;
+
+  &:hover,
+  &:focus {
+    background-color: $grey-68;
+    color: #ffffff;
+  }
+
+  &:active {
+    color: rgba(255, 255, 255, 0.3);
+  }
 }
