--- a/sass/blocks/contacts.scss
+++ b/sass/blocks/contacts.scss
@@ -102,8 +102,18 @@
   }
 
   &__email {
+    border-bottom: 1px solid $downy;
     color: $grey-68;
     text-decoration: none;
+
+    &:hover,
+    &:focus {
+      color: $downy;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
   }
 
   &__write {
