--- a/sass/blocks/form-order.scss
+++ b/sass/blocks/form-order.scss
@@ -120,6 +120,7 @@
       border: none;
       border-bottom: 2px solid #000000;
       background-color: transparent;
+      color: $grey-68;
       letter-spacing: 0;
       font-weight: 400;
       font-size: 17px;
@@ -131,7 +132,7 @@
         padding-left: 17px;
         font-size: 19px;
         line-height: 18px;
-      }
+      };
     }
   }
 
@@ -155,9 +156,10 @@
   &__label-radio {
     position: relative;
     padding-bottom: 20px;
+    cursor: pointer;
 
     @media (min-width: $tablet-width) {
-      padding-bottom: 45px;
+      margin-bottom: 25px;
     }
 
     &::before {
@@ -175,32 +177,15 @@
         height: 52px;
       }
     }
-
-    &::after {
-      position: absolute;
-      top: 3px;
-      left: 12px;
-      width: 15px;
-      height: 15px;
-      border-radius: 50%;
-      background-color: $downy;
-      content: "";
-
-      @media (min-width: $tablet-width) {
-        top: 5px;
-        left: 15px;
-        width: 21px;
-        height: 21px;
-      }
-    }
   }
 
   &__label-checkbox {
     position: relative;
-    padding-bottom: 40.5px;
+    margin-bottom: 40.5px;
+    cursor: pointer;
 
     @media (min-width: $tablet-width) {
-      padding-bottom: 46px;
+      margin-bottom: 46px;
       width: 260px;
     }
 
@@ -219,22 +204,22 @@
       }
     }
 
-    &::after {
-      position: absolute;
-      top: 4px;
-      left: 9px;
-      width: 23px;
-      height: 16px;
-      background-image: url("../img/icon-tick.svg");
-      content: "";
-
-      @media (min-width: $tablet-width) {
-        top: 7px;
-        left: 11px;
-        width: 32px;
-        height: 22px;
-      }
-    }
+    // &::after {
+    //   position: absolute;
+    //   top: 4px;
+    //   left: 9px;
+    //   width: 23px;
+    //   height: 16px;
+    //   background-image: url("../img/icon-tick.svg");
+    //   content: "";
+    //
+    //   @media (min-width: $tablet-width) {
+    //     top: 7px;
+    //     left: 11px;
+    //     width: 32px;
+    //     height: 22px;
+    //   }
+    // }
   }
 
   &__textarea {
@@ -420,4 +405,82 @@
       flex-direction: column;
     }
   }
+}
+
+#accessory:checked ~ .form-order__label-radio[for=accessory]::after {
+  position: absolute;
+  top: 3px;
+  left: 12px;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: $downy;
+  content: "";
+
+  @media (min-width: $tablet-width) {
+    top: 5px;
+    left: 15px;
+    width: 21px;
+    height: 21px;
+  }
+}
+
+#toy:checked ~ .form-order__label-radio[for=toy]::after {
+  position: absolute;
+  top: 3px;
+  left: 12px;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: $downy;
+  content: "";
+
+  @media (min-width: $tablet-width) {
+    top: 5px;
+    left: 15px;
+    width: 21px;
+    height: 21px;
+  }
+}
+
+.form-order__label-radio:hover.form-order__label-radio::before {
+  border: 2px solid $downy;
+}
+
+.form-order__label-radio:active.form-order__label-radio::before,
+.form-order__label-radio:focus.form-order__label-radio::before {
+  border: 2px solid $grey-68;
+  opacity: 0.3;
+}
+
+.form-order__input:checked + .form-order__label-checkbox::after {
+  position: absolute;
+  top: 4px;
+  left: 9px;
+  width: 23px;
+  height: 16px;
+  background-image: url("../img/icon-tick.svg");
+  content: "";
+
+  @media (min-width: $tablet-width) {
+    top: 7px;
+    left: 11px;
+    width: 32px;
+    height: 22px;
+  }
+}
+
+.form-order__label:hover.form-order__label::before {
+  border: 2px solid $downy;
+}
+
+.form-order__label:active.form-order__label::before,
+.form-order__label:focus.form-order__label::before {
+  border: 2px solid $grey-68;
+  opacity: 0.3;
+}
+
+.form-order__input-text:hover,
+.form-order__input-text:focus {
+  border-bottom: 2px solid $downy;
 }
