--- a/sass/blocks/product-stock.scss
+++ b/sass/blocks/product-stock.scss
@@ -27,5 +27,14 @@
     font-size: 15px;
     font-family: $open-sans;
     line-height: 24px;
+
+    &:hover,
+    &:focus {
+      color: rgba(0, 0, 0, 0.6);
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
   }
 }
