--- a/sass/blocks/site-menu.scss
+++ b/sass/blocks/site-menu.scss
@@ -14,6 +14,15 @@
     padding-bottom: 28px;
     width: 100%;
 
+    &:hover,
+    &:focus {
+      opacity: 0.6;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
+
     @media (min-width: $tablet-width) {
       margin-right: 35px;
       padding: 0;
