--- a/sass/blocks/user-menu.scss
+++ b/sass/blocks/user-menu.scss
@@ -23,6 +23,15 @@
   &__link {
     width: 100%;
 
+    &:hover,
+    &:focus {
+      color: rgba(0, 0, 0, 0.6);
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
+
     @media (min-width: $tablet-width) {
       padding-top: 30px;
       padding-bottom: 33px;
